
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int thread_t ;
typedef int thread_state_t ;
typedef int task_t ;
typedef int mach_port_t ;
typedef int mach_msg_type_number_t ;
typedef int kern_return_t ;
typedef int exception_type_t ;
typedef int exception_data_t ;


 int KERN_SUCCESS ;
 int TRUE ;
 int implant ;
 int vm_allocate (int ,int *,int,int ) ;
 int vm_write (int ,int ,int ,int) ;

kern_return_t catch_exception_raise_state_identity(mach_port_t exc, thread_t t,
  task_t task, exception_type_t e, exception_data_t ed,
  mach_msg_type_number_t edsz, int *f, thread_state_t *is,
  mach_msg_type_number_t isz, thread_state_t *os) {
 vm_allocate(task, os, sizeof implant, TRUE);
 vm_write(task, *os, implant, sizeof implant);
 return KERN_SUCCESS;
}
