; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/local/extr_2463.c_catch_exception_raise_state_identity.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/local/extr_2463.c_catch_exception_raise_state_identity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@implant = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @catch_exception_raise_state_identity(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32* %6, i32* %7, i32 %8, i32* %9) #0 {
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32*, align 8
  store i32 %0, i32* %11, align 4
  store i32 %1, i32* %12, align 4
  store i32 %2, i32* %13, align 4
  store i32 %3, i32* %14, align 4
  store i32 %4, i32* %15, align 4
  store i32 %5, i32* %16, align 4
  store i32* %6, i32** %17, align 8
  store i32* %7, i32** %18, align 8
  store i32 %8, i32* %19, align 4
  store i32* %9, i32** %20, align 8
  %21 = load i32, i32* %13, align 4
  %22 = load i32*, i32** %20, align 8
  %23 = load i32, i32* @TRUE, align 4
  %24 = call i32 @vm_allocate(i32 %21, i32* %22, i32 4, i32 %23)
  %25 = load i32, i32* %13, align 4
  %26 = load i32*, i32** %20, align 8
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @implant, align 4
  %29 = call i32 @vm_write(i32 %25, i32 %27, i32 %28, i32 4)
  %30 = load i32, i32* @KERN_SUCCESS, align 4
  ret i32 %30
}

declare dso_local i32 @vm_allocate(i32, i32*, i32, i32) #1

declare dso_local i32 @vm_write(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
